nuevos colores para el footer

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         </div>
 
       </section>
-      <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+      <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
+        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
