--- a/buscador.html
+++ b/buscador.html
@@ -47,9 +47,9 @@
         });
     });
     </script>
-    <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-    </footer>
+    <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
+  <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+</footer>
 </body>
 
 </html>
