--- a/estadisticas.html
+++ b/estadisticas.html
@@ -80,8 +80,8 @@
     </article>
 
 
-      <footer class="padding-1-0 borderc-grey border-t1 cruise">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
+      <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
+        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
