--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -38,8 +38,8 @@
 
       <canvas id="zec" width="400" height="400"></canvas>
 
-      <footer class="padding-1-0 borderc-grey border-t1 grey">
-        <p class="maw-60 padding-1-0">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+      <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
+        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     </div>
     <script type="text/javascript" src="../js/Chart.min.js"></script>
