--- a/estadisticas.html
+++ b/estadisticas.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body>
+<body class="mih-100">
     <header class="font-0 border-b1 borderc-grey w-100">
           <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
@@ -33,6 +33,9 @@
     </nav>
     <p>Estadisticas acumuladas</p>
 
+
+    <p>Esta serie de estadisticas se ha hecho a partir de todas las votaciones que se han realizado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. Como en algunas mociones se votan diferentes puntos los porcentajes se han obtenido sumando todas las votaciones.</p>
+
     Unanimidad
     Votos por trios
     Votos por parejas
@@ -43,13 +46,27 @@
     ¿Quién vota más en contra?
     ¿Quién vota más a favor?
 
-    <section id="lanzando" class="w-100 h-100vh grey">
+    <section id="unanimidad" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <div class="estadisticas w-70 vertical-am display-ib font-1">
+        <p class="font-2">¿Qué porcentaje de mociones se han votado por unanimidad?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="myChart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-30 vertical-am display-ib font-1">
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+      </article>
+    </section>
+
+    <section id="unanimidad" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Cual es la unión que mas se repite?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="myChart" width="400" height="400"></canvas>
+
+        </div>
+        <div class="texto w-50 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
