--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body>
+<body class="mih-100">
     <div class="container">
       <header class="font-0 border-b1 borderc-grey w-100">
             <div class="maw-60">
