incluyendo nuevas escenas en scrollMagic para lanzar funciones en diferentes posiciones de scroll

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -50,24 +50,38 @@
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Qué porcentaje de mociones se han votado por unanimidad?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
-          <canvas id="myChart" width="400" height="400"></canvas>
+          <canvas id="unanimidad-chart" width="400" height="400"></canvas>
 
         </div>
         <div class="texto w-50 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
+
         </div>
       </article>
     </section>
 
-    <section id="unanimidad" class="w-100 h-100vh">
+    <section id="repeticion" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Cual es la unión que mas se repite?</p>
-        <div class="estadisticas w-50 vertical-am display-ib font-1">
-          <canvas id="myChart" width="400" height="400"></canvas>
-
-        </div>
         <div class="texto w-50 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
+        </div>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="repeticion-chart" width="400" height="400"></canvas>
+
+        </div>
+      </article>
+    </section>
+
+    <section id="mas-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha presentado más mociones?</p>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
+
         </div>
       </article>
     </section>
