--- a/estadisticas.html
+++ b/estadisticas.html
@@ -31,19 +31,14 @@
           <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
       </div>
     </nav>
-    <p>Estadisticas acumuladas</p>
 
 
-    <p>Esta serie de estadisticas se ha hecho a partir de todas las votaciones que se han realizado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. Como en algunas mociones se votan diferentes puntos los porcentajes se han obtenido sumando todas las votaciones.</p>
+    <div class="maw-60">
+      <p class="font-2">Estadisticas acumuladas</p>
+      <p class="font-1">Esta serie de estadisticas se ha hecho a partir de todas las votaciones que se han realizado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. Como en algunas mociones se votan diferentes puntos los porcentajes se han obtenido sumando todas las votaciones.</p>
+    </div>
 
-    Unanimidad
-    Votos por trios
-    Votos por parejas
-    ¿Quién ha presentado más mociones?
-    ¿Quién ha perdido mas mociones?
-    ¿Quién ha ganado más mociones?
-    ¿Quién se ha abstenido más?
-    ¿Quién vota más en contra?
+
     ¿Quién vota más a favor?
 
     <section id="unanimidad" class="w-100 h-100vh">
@@ -76,12 +71,74 @@
     <section id="mas-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha presentado más mociones?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
+
+        </div>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+      </article>
+    </section>
+
+    <section id="perdido-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha perdido más mociones?</p>
         <div class="texto w-50 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
-          <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
+          <canvas id="perdido-mociones-chart" width="400" height="400"></canvas>
 
+        </div>
+      </article>
+    </section>
+
+    <section id="ganado-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="ganado-mociones-chart" width="400" height="400"></canvas>
+
+        </div>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+      </article>
+    </section>
+
+    <section id="abstenido-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="abstencion-mociones-chart" width="400" height="400"></canvas>
+        </div>
+      </article>
+    </section>
+
+    <section id="en-contra-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="en-contra-mociones-chart" width="400" height="400"></canvas>
+        </div>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
+        </div>
+      </article>
+    </section>
+
+    <section id="a-favor-mociones" class="w-100 h-100vh">
+      <article class="maw-60 h-100p vertical-am font-0">
+        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <div class="estadisticas w-50 vertical-am display-ib font-1">
+          <canvas id="a-favor-mociones-chart" width="400" height="400"></canvas>
+        </div>
+        <div class="texto w-50 vertical-am display-ib font-1">
+          Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
     </section>
