nuevas separaciones en estadisticas y cargando datos reales

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -48,7 +48,7 @@
           <canvas id="unanimidad-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
 
         </div>
@@ -58,7 +58,7 @@
     <section id="repeticion" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Cual es la unión que mas se repite?</p>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -75,7 +75,7 @@
           <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
@@ -84,7 +84,7 @@
     <section id="perdido-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha perdido más mociones?</p>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -101,7 +101,7 @@
           <canvas id="ganado-mociones-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
@@ -110,7 +110,7 @@
     <section id="abstenido-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha ganado más mociones?</p>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -125,7 +125,7 @@
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="en-contra-mociones-chart" width="400" height="400"></canvas>
         </div>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
@@ -134,7 +134,7 @@
     <section id="a-favor-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha ganado más mociones?</p>
-        <div class="texto w-50 vertical-am display-ib font-1">
+        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
