--- a/estadisticas.html
+++ b/estadisticas.html
@@ -33,23 +33,24 @@
     </nav>
 
 
-    <div class="maw-60">
+    <div class="maw-60 margin-y5">
       <p class="font-2">Estadisticas acumuladas</p>
-      <p class="font-1">Esta serie de estadisticas se ha hecho a partir de todas las votaciones que se han realizado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. Como en algunas mociones se votan diferentes puntos los porcentajes se han obtenido sumando todas las votaciones.</p>
+      <p class="font-1">Esta serie de estadisticas se ha hecho a partir de todas las votaciones que se han realizado en el pleno del Ayuntamiento de Zaragoza desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. En algunas mociones se votan diferentes puntos, así que los porcentajes se han obtenido de la suma de todas las votaciones.</p>
     </div>
 
 
-    ¿Quién vota más a favor?
 
     <section id="unanimidad" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Qué porcentaje de mociones se han votado por unanimidad?</p>
+        <p class="font-2">¿Qué porcentaje de votaciones se han votado por unanimidad?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="unanimidad-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
-          Hola que pasa que tal mira mi coche de moda
+        <div class="texto w-40 padding-l1 vertical-am display-ib font-1">
+          <svg class="w-h-100px margin-yx display-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 125"><path d="M38,61.7l-2.8,1.8c-0.6,0.4-0.7,1.1-0.4,1.7c0.4,0.5,1.2,0.7,1.7,0.3l3.4-2.2L38,61.7z"/><path d="M36.1,60.2l-2.3-1.8l-0.1,0.1c-0.6,0.4-0.8,1.2-0.4,1.8c0.5,0.7,1.4,0.9,2.1,0.4L36.1,60.2z"/><path d="M88.4,24.2l-34.6-20c-2.2-1.3-5-1.3-7.2,0l-34.6,20c-2.2,1.3-3.6,3.7-3.6,6.2v40c0,2.6,1.4,5,3.6,6.2l34.6,20  c1.1,0.6,2.3,1,3.6,1s2.5-0.3,3.6-1l34.6-20c2.2-1.3,3.6-3.7,3.6-6.2v-40C92,27.9,90.6,25.5,88.4,24.2z M66.3,53  c0,0.2-0.1,0.4-0.1,0.6c-0.1,0.9-0.3,1.9-0.5,2.9c0.6,1.2,0.5,2.7-0.4,3.8c-0.4,0.5-1,0.9-1.6,1.1c0.5,1.1,0.5,2.5-0.3,3.5l0,0  c0,0-0.1,0-0.1,0.1c0,0,0,0.1-0.1,0.1l0,0c-0.9,0.9-2.1,1.3-3.3,1.1c-0.1,0.6-0.3,1.1-0.7,1.6c-1.2,1.5-3.5,1.8-5,0.6l-2.5-2  c-0.1,0.4-0.3,0.8-0.6,1.2c-1.2,1.5-3.5,1.8-5,0.6l-0.4-0.3l-1.4,1c0,0,0,0,0,0l-2.7,1.8c-1.6,1.1-3.8,0.6-4.9-1  c-0.3-0.5-0.5-1.1-0.5-1.7C35,68,33.7,67.5,33,66.5l0,0c0,0,0-0.1,0-0.1c0,0,0-0.1-0.1-0.1l0,0c-0.6-1.1-0.6-2.5,0-3.5  c-0.6-0.3-1.1-0.7-1.5-1.3c-1-1.5-0.6-3.6,0.8-4.7c-1.3-2-1.5-4.9-1.6-7c0-0.2,0-0.4,0-0.6l-5.1-4l1.1-2l6.2,4.8l0,0.5  c0,0.3,0.1,0.8,0.1,1.2c0.1,2.1,0.3,5.3,1.8,6.5l8.8,7l4.1,3.2c0.6,0.5,1.4,0.4,1.9-0.2c0.4-0.6,0.3-1.4-0.2-1.8L44,60.2l1.4-1.8  l5.2,4.1l5.1,4.1c0.6,0.5,1.4,0.4,1.8-0.2c0.4-0.6,0.3-1.4-0.2-1.8l-11.5-9.1l1.4-1.8l11.5,9.1c0.1,0.1,0.2,0.2,0.3,0.3l0,0l0.8,0.6  c0.5,0.4,1.3,0.4,1.8-0.1c0.4-0.5,0.3-1.3-0.3-1.7l-13-10.3l1.4-1.8l11.6,9.3c0.7,0.5,1.6,0.4,2.1-0.2c0.4-0.6,0.3-1.4-0.2-1.8  l-12-9.6c-1.1-0.8-3.6,0.7-3.6,0.7l-7.4,4.8c-1.4,0.6-3.1-0.4-4.3-1.6c-0.1-0.1-0.2-0.2-0.3-0.4l-0.2-0.2c-1.1-1.9-1-4,0.4-4.9  l12.7-8.3l-1.3-1c-1.4-1.1-5.3,0.9-7.2,1.9l-0.6,0.3l-5-4.2l0.7-2.1l4.5,3.7c3.4-1.7,6.8-3,8.9-1.3l2.2,1.7c2.1-0.3,4.7,1.1,7.3,2.7  l8.3-5.4l1.2,1.9l-9.5,6.2l-0.6-0.4c-1.8-1.1-5.5-3.5-6.9-2.6l-13.5,8.8c-0.2,0.1-0.3,0.9,0.3,1.9c0.7,1,2,1.2,3,0.6l5.8-3.8  c0.8-0.6,2.1-1.1,2.1-1.1c1.6-0.6,3-0.6,4.1,0.2l7.9,6.3l3.3,2.6c0.1-0.4,0.1-0.9,0.2-1.3c0.1-0.4,0.1-0.8,0.2-1.2l0.1-0.5l9.8-6.3  l1.2,1.9L66.3,53z"/><path d="M41.8,64.7L39,66.5c-0.6,0.4-0.8,1.2-0.4,1.8c0.4,0.6,1.2,0.8,1.8,0.4l3.5-2.3l-1.9-1.5L41.8,64.7z"/></svg>
+          <p class="font-1">En el pleno del Ayuntamiento de Zaragoza se han realizado 274 votaciones, de las cuales un 37.59% se han votado por unanimidad.</p>
+
 
         </div>
       </article>
@@ -57,9 +58,14 @@
 
     <section id="repeticion" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Cual es la unión que mas se repite?</p>
-        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
-          Hola que pasa que tal mira mi coche de moda
+        <p class="font-2">Los tripartitos del pleno del Ayuntamiento de Zaragoza</p>
+        <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
+          <svg  class="w-h-100px margin-yx display-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 125" ><path d="M50,32.2c3.8,0,6.9-3.1,6.9-6.9c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9C43.1,29.1,46.2,32.2,50,32.2z M50,20.4  c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9c-2.7,0-4.9-2.2-4.9-4.9C45.1,22.6,47.3,20.4,50,20.4z M62,40.4l0,4.6h-2v-4.7  c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H44.2c-1.4,0-2.5,0.4-3.2,1.1c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5  c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8C62.2,37.7,62,40.3,62,40.4z M23,65.2c3.8,0,6.9-3.1,6.9-6.9  c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9C16.1,62.1,19.2,65.2,23,65.2z M23,53.4c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9  c-2.7,0-4.9-2.2-4.9-4.9C18.1,55.6,20.3,53.4,23,53.4z M35,73.4l0,4.6h-2v-4.7c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H17.2  c-1.4,0-2.5,0.4-3.2,1.1c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8  C35.2,70.7,35,73.3,35,73.4z M77,65.2c3.8,0,6.9-3.1,6.9-6.9c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9  C70.1,62.1,73.2,65.2,77,65.2z M77,53.4c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9c-2.7,0-4.9-2.2-4.9-4.9  C72.1,55.6,74.3,53.4,77,53.4z M89,73.4l0,4.6h-2v-4.7c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H71.2c-1.4,0-2.5,0.4-3.2,1.1  c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8  C89.2,70.7,89,73.3,89,73.4z M51,49h-2v6.7l-5.5,4.4l1.2,1.6l5.3-4.2l5.3,4.2l1.2-1.6L51,55.7V49z"/></svg>
+
+          <p>El tripartito es una expresión que se ha venido repitiendo en la política Zaragozana a lo largo del tiempo.</p>
+
+          <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span>, seguido muy de cerca por el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
+
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="repeticion-chart" width="400" height="400"></canvas>
@@ -75,16 +81,19 @@
           <canvas id="mas-mociones-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
-          Hola que pasa que tal mira mi coche de moda
+        <div class="texto w-40 padding-l1 vertical-am display-ib font-1">
+          <svg class="w-h-100px margin-yx display-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><polygon points="24.2,37.7 30.2,37.7 27.2,31.3 "/><polygon points="47.5,37.7 53.5,37.7 50.5,31.3 "/><path d="M88.6,28.8l-0.1-0.4c-0.2-0.6-0.5-1.1-0.9-1.5L63.3,2.4c-0.3-0.3-0.6-0.5-1-0.7L61,1.2L22.6,1.1c-6.2,0-11.3,5.1-11.3,11.3  v74.3c0,6.2,5.1,11.3,11.3,11.3h54.8c6.2,0,11.3-5.1,11.3-11.3V29.9L88.6,28.8z M63.5,14.2L76.2,27h-9.5c-1.7,0-3.2-1.4-3.2-3.2  V14.2z M55.4,38.2C55.4,38.2,55.4,38.2,55.4,38.2c0,0.1,0,0.1,0,0.1c0,0,0,0,0,0.1c0,0,0,0.1,0,0.1c0,0,0,0,0,0c0,2.2-2.1,4-4.8,4.1  c0,0-0.1,0-0.1,0c-0.1,0-0.1,0-0.2,0c0,0-0.1,0-0.1,0c-2.7-0.1-4.8-1.9-4.8-4.1c0,0,0,0,0,0c0,0,0-0.1,0-0.1c0,0,0,0,0-0.1  c0,0,0,0,0-0.1c0,0,0-0.1,0-0.1c0,0,0,0,0,0l4.2-9c0.1-0.3,0.4-0.4,0.7-0.4c0.3,0,0.6,0.2,0.7,0.4L55.4,38.2  C55.4,38.2,55.4,38.2,55.4,38.2z M27.1,23.8c0.1,0,0.1,0,0.2,0h10.8v-3.5c0-0.4,0.3-0.8,0.8-0.8s0.8,0.3,0.8,0.8v3.5h10.8  c0.1,0,0.1,0,0.2,0c1,0.1,1.8,0.9,1.8,2c0,1.1-0.9,2-2,2s-2-0.9-2-2c0-0.1,0-0.3,0-0.4h-8.9V48h5.3c0.4,0,0.8,0.3,0.8,0.8  s-0.3,0.8-0.8,0.8H32.8c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8h5.3V25.4h-8.9c0,0.1,0,0.3,0,0.4c0,1.1-0.9,2-2,2c-1.1,0-2-0.9-2-2  C25.3,24.7,26.1,23.9,27.1,23.8z M27.3,42.6c-0.1,0-0.1,0-0.2,0c0,0-0.1,0-0.1,0c-2.7-0.1-4.8-1.9-4.8-4.1c0,0,0,0,0,0  c0,0,0-0.1,0-0.1c0,0,0,0,0-0.1c0,0,0,0,0-0.1c0,0,0-0.1,0-0.1c0,0,0,0,0,0l4.3-9c0.1-0.3,0.4-0.4,0.7-0.4c0.3,0,0.6,0.2,0.7,0.5  l4.1,9c0,0,0,0,0,0c0,0,0,0.1,0,0.1c0,0,0,0,0,0.1c0,0,0,0,0,0.1c0,0,0,0.1,0,0.1c0,0,0,0,0,0C32.1,40.7,30,42.4,27.3,42.6  C27.3,42.6,27.3,42.6,27.3,42.6z M47.9,52.1H29.8c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8h18.2c0.4,0,0.8,0.3,0.8,0.8  S48.4,52.1,47.9,52.1z M77.8,85.4H62.4v-3.8h15.4V85.4z M77.8,75.6H49.2v-3.8h28.6V75.6z M77.8,66.1H49.2v-3.8h28.6V66.1z"/></svg>
+
+          <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 votaciones</span>. El <span class="font-w8">PSOE</span> se sitúa en cabeza con 50 mociones presentadas, seguido muy de cerca por el <span class="font-w8">PP</span> con <span class="font-w8">47</span> y <span class="font-w8">C'S</span> con <span class="font-w8">44</span>, en último posición esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
+
         </div>
       </article>
     </section>
 
     <section id="perdido-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha perdido más mociones?</p>
-        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
+        <p class="font-2">¿Quién ha perdido más?</p>
+        <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -96,12 +105,12 @@
 
     <section id="ganado-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <p class="font-2">¿Quién ha ganado más?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="ganado-mociones-chart" width="400" height="400"></canvas>
 
         </div>
-        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
@@ -109,8 +118,8 @@
 
     <section id="abstenido-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más mociones?</p>
-        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
+        <p class="font-2">¿Quién se ha abstenido más?</p>
+        <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -121,11 +130,11 @@
 
     <section id="en-contra-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más mociones?</p>
+        <p class="font-2">¿Quién ha ganado más en contra?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="en-contra-mociones-chart" width="400" height="400"></canvas>
         </div>
-        <div class="texto w-40 padding-l-10p vertical-am display-ib font-1">
+        <div class="texto w-40 padding-l1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
       </article>
@@ -133,8 +142,8 @@
 
     <section id="a-favor-mociones" class="w-100 h-100vh">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más mociones?</p>
-        <div class="texto w-40 padding-r-10p vertical-am display-ib font-1">
+        <p class="font-2">¿Quién ha ganado más a favor?</p>
+        <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
