--- a/creditos.html
+++ b/creditos.html
@@ -33,13 +33,11 @@
     </nav>
 
 
-    <div class="maw-60 margin-y5">
-
-    <p>Creditos</p>
+    <div class="maw-60 margin-y1">
 
     <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza. En un futuro no muy lejano la idea es presentar los datos de las mociones como objetos JSON siguiendo los patrones establecidos en la API del Ayuntamiento de Zaragoza.</p>
 
-    <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías open source.</p>
+    <p class="font-w8">Esta web no hubiera sido posible sin la generosa ayuda de librerías distribuídas como open source.</p>
 
     <p>Para las gráfica animadadas he utilizado <a href="http://mojs.io">mo.js</a> de <a href="https://twitter.com/legomushroom">Oleg Solomka</a>.</p>
 
@@ -47,17 +45,20 @@
 
     <p>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</p>
 
-    <p>Para la iconografía he utilizado iconos de materialdesing.io.</p>
-    <p>El icono que acompaña las gráficas de unanimidad ha sido diseñado por Aneeque Ahmed on the @NounProject. https://thenounproject.com/term/agreement/863607</p>
+    <p>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</p>
 
 
-    <p>legal by Aneeque Ahmed from the Noun Project</p>
+    <p>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
 
-    <p>Share by DANT from the Noun Project</p>
+    <p>El icono que acompaña las gráficas de ¿quién ha presentado más mociones ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
 
-    <p>Award Sad by Thomas Helbig from the Noun Project</p>
+    <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dant/">Dant</a> on the @NounProject.</p>
 
-    <p>Para el CSS he utilizado Astral, un framework CSS hecho a mi medida y que esta fuermente inspirado en Tachyons y Basscss.</p>
+
+    <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
+
+
+    <p>Para el CSS he utilizado Astral, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
 
     </div>
 
