--- a/index.html
+++ b/index.html
@@ -12,45 +12,47 @@
 
 <body class="mih-100">
     <header class="font-0 border-b1 borderc-grey w-100">
-          <div class="maw-60">
+        <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
-              <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
-              <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
+                <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+                <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r">Facebook</a>
             </div>
-          </div>
+        </div>
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1">
-      <div class="maw-60">
-          <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
-          <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
-          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
-          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
-          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
-          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
-          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
-      </div>
+        <div class="maw-60">
+            <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PP</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ZEC</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+        </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-2-0 grey containerBuscador">
-      <div class="maw-60 pos-r">
-        <form class="w-60" action="buscador.html">
-          <input placeholder="Busca y encuentra..." class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-          <button class="btn-search bgc-white" type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101"/></svg>
-          </button>
-        </form>
-      </div>
+        <div class="maw-60 pos-r">
+            <form class="w-60" action="buscador.html">
+                <input placeholder="Busca y encuentra..." class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                <button class="btn-search bgc-white" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                    </svg>
+                </button>
+            </form>
+        </div>
     </div>
     <div class="maw-60 padding-t1">
         <div>
-          <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
-          <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
-      </div>
-      <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
-      </p>
-      <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
-    <article class="margin-y1 display-ib  w-100">
-        <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
+            <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+            <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
+        </div>
+        <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+        </p>
+        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+        <article class="margin-y1 display-ib  w-100">
+            <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
           <div class="display-b w-100">
             <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
             <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
@@ -87,34 +89,60 @@
       </div>
 
 
-      <section>
+      <section class="border-t1  padding-t1 border-b1  padding-2-0 grey borderc-grey">
 
-        <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey">
-          <h2 class="margin-b0  maw-60">Plenos del 2016</h2>
-        </div>
-        <div class="maw-60 padding-1 padding-l-n">
-          <a class="padding-0-5" href="#">enero</a>
-          <a class="padding-0-5" href="#">febrero</a>
-          <a class="padding-0-5" href="#">marzo</a>
-          <a class="padding-0-5" href="#">abril</a>
-          <a class="padding-0-5" href="#">mayo</a>
-          <a class="padding-0-5" href="#">junio</a>
-          <a class="padding-0-5" href="#">julio</a>
-          <a class="padding-0-5" href="#">agosto</a>
-          <a class="padding-0-5" href="#">septiembre</a>
-          <a class="padding-0-5" href="#">octubre</a>
-          <a class="padding-0-5" href="#">noviembre</a>
-          <a class="padding-0-5" href="#">diciembre</a>
-        </div>
+          <h2 class="margin-b0  maw-60 font-2 margin-b1">Calendario de plenos</h2>
 
-        <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey grey">
-          <h2 class="font-2 margin-b0  maw-60">Diciembre</h2>
-          <div class="maw-60  margin-t1">
-              <div class="w-100 display-b bgc-white padding-1 border-l5 borderc-ch borderc-greyc">
-                  <span class="font-1-5 font-w8 display-ib border-r1 borderc-black padding-r1">23</span>
-              </div>
+
+          <div class="maw-60 font-0 clearfix">
+
+            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 bxs-3 bgc-white">
+                  <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0 ">2015</p>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de octubre de 2015</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de octubre de 2015</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de noviembre de 2015</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 borderc-grey margin-t0">23 de diciembre de 2015</span></a>
+
+            </div>
+
+            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 fl-r bxs-3 bgc-white">
+
+                  <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0">2016</p>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">26 de febrero de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">23 de marzo de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">29 de abril de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de mayo de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">1 de julio de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">22 de julio de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de septiembre de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de octubre de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de diciembre de 2016</span></a>
+
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 margin-t0 transparent">23 de diciembre de 2016</span></a>
+
+
+            </div>
+
           </div>
-        </div>
+
+
 
       </section>
       <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
