datos reales en las estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -40,7 +40,7 @@
 
 
 
-    <section id="unanimidad" class="w-100 h-100vh">
+    <section id="unanimidad" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Qué porcentaje de votaciones se han votado por unanimidad?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -56,7 +56,7 @@
       </article>
     </section>
 
-    <section id="repeticion" class="w-100 h-100vh">
+    <section id="repeticion" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">Los tripartitos del pleno del Ayuntamiento de Zaragoza</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
@@ -74,7 +74,7 @@
       </article>
     </section>
 
-    <section id="mas-mociones" class="w-100 h-100vh">
+    <section id="mas-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha presentado más mociones?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -84,13 +84,13 @@
         <div class="texto w-40 padding-l1 vertical-am display-ib font-1">
           <svg class="w-h-100px margin-yx display-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><polygon points="24.2,37.7 30.2,37.7 27.2,31.3 "/><polygon points="47.5,37.7 53.5,37.7 50.5,31.3 "/><path d="M88.6,28.8l-0.1-0.4c-0.2-0.6-0.5-1.1-0.9-1.5L63.3,2.4c-0.3-0.3-0.6-0.5-1-0.7L61,1.2L22.6,1.1c-6.2,0-11.3,5.1-11.3,11.3  v74.3c0,6.2,5.1,11.3,11.3,11.3h54.8c6.2,0,11.3-5.1,11.3-11.3V29.9L88.6,28.8z M63.5,14.2L76.2,27h-9.5c-1.7,0-3.2-1.4-3.2-3.2  V14.2z M55.4,38.2C55.4,38.2,55.4,38.2,55.4,38.2c0,0.1,0,0.1,0,0.1c0,0,0,0,0,0.1c0,0,0,0.1,0,0.1c0,0,0,0,0,0c0,2.2-2.1,4-4.8,4.1  c0,0-0.1,0-0.1,0c-0.1,0-0.1,0-0.2,0c0,0-0.1,0-0.1,0c-2.7-0.1-4.8-1.9-4.8-4.1c0,0,0,0,0,0c0,0,0-0.1,0-0.1c0,0,0,0,0-0.1  c0,0,0,0,0-0.1c0,0,0-0.1,0-0.1c0,0,0,0,0,0l4.2-9c0.1-0.3,0.4-0.4,0.7-0.4c0.3,0,0.6,0.2,0.7,0.4L55.4,38.2  C55.4,38.2,55.4,38.2,55.4,38.2z M27.1,23.8c0.1,0,0.1,0,0.2,0h10.8v-3.5c0-0.4,0.3-0.8,0.8-0.8s0.8,0.3,0.8,0.8v3.5h10.8  c0.1,0,0.1,0,0.2,0c1,0.1,1.8,0.9,1.8,2c0,1.1-0.9,2-2,2s-2-0.9-2-2c0-0.1,0-0.3,0-0.4h-8.9V48h5.3c0.4,0,0.8,0.3,0.8,0.8  s-0.3,0.8-0.8,0.8H32.8c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8h5.3V25.4h-8.9c0,0.1,0,0.3,0,0.4c0,1.1-0.9,2-2,2c-1.1,0-2-0.9-2-2  C25.3,24.7,26.1,23.9,27.1,23.8z M27.3,42.6c-0.1,0-0.1,0-0.2,0c0,0-0.1,0-0.1,0c-2.7-0.1-4.8-1.9-4.8-4.1c0,0,0,0,0,0  c0,0,0-0.1,0-0.1c0,0,0,0,0-0.1c0,0,0,0,0-0.1c0,0,0-0.1,0-0.1c0,0,0,0,0,0l4.3-9c0.1-0.3,0.4-0.4,0.7-0.4c0.3,0,0.6,0.2,0.7,0.5  l4.1,9c0,0,0,0,0,0c0,0,0,0.1,0,0.1c0,0,0,0,0,0.1c0,0,0,0,0,0.1c0,0,0,0.1,0,0.1c0,0,0,0,0,0C32.1,40.7,30,42.4,27.3,42.6  C27.3,42.6,27.3,42.6,27.3,42.6z M47.9,52.1H29.8c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8h18.2c0.4,0,0.8,0.3,0.8,0.8  S48.4,52.1,47.9,52.1z M77.8,85.4H62.4v-3.8h15.4V85.4z M77.8,75.6H49.2v-3.8h28.6V75.6z M77.8,66.1H49.2v-3.8h28.6V66.1z"/></svg>
 
-          <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 votaciones</span>. El <span class="font-w8">PSOE</span> se sitúa en cabeza con 50 mociones presentadas, seguido muy de cerca por el <span class="font-w8">PP</span> con <span class="font-w8">47</span> y <span class="font-w8">C'S</span> con <span class="font-w8">44</span>, en último posición esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
+          <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 274 mociones</span>. El <span class="font-w8">PSOE</span> se sitúa en cabeza con 50 mociones presentadas, seguido muy de cerca por el <span class="font-w8">PP</span> con <span class="font-w8">47</span> y <span class="font-w8">C'S</span> con <span class="font-w8">44</span>, en último posición esta <span class="font-w8">ZEC</span> con <span class="font-w8">28</span>.</p>
 
         </div>
       </article>
     </section>
 
-    <section id="perdido-mociones" class="w-100 h-100vh">
+    <section id="perdido-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha perdido más?</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
@@ -103,7 +103,7 @@
       </article>
     </section>
 
-    <section id="ganado-mociones" class="w-100 h-100vh">
+    <section id="ganado-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha ganado más?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -116,7 +116,7 @@
       </article>
     </section>
 
-    <section id="abstenido-mociones" class="w-100 h-100vh">
+    <section id="abstenido-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién se ha abstenido más?</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
@@ -128,7 +128,7 @@
       </article>
     </section>
 
-    <section id="en-contra-mociones" class="w-100 h-100vh">
+    <section id="en-contra-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha ganado más en contra?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
@@ -140,7 +140,7 @@
       </article>
     </section>
 
-    <section id="a-favor-mociones" class="w-100 h-100vh">
+    <section id="a-favor-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
         <p class="font-2">¿Quién ha ganado más a favor?</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
