incluyendo la pagina de creditos

--- a/partidos/psoe.html
+++ b/partidos/psoe.html
@@ -30,6 +30,7 @@
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+<a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
         </div>
       </nav>
       <img class="object-fit" src="../img/logo-psoe.png" alt="Logotipo de Partido Socialista Obrero Español">
