--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">PSOE</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">C'S</a>
             <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CHA</a>
+<a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-2-0 grey containerBuscador">
@@ -96,46 +98,156 @@
 
           <div class="maw-60 font-0 clearfix">
 
-            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 bxs-3 bgc-white">
+            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
                   <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0 ">2015</p>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de octubre de 2015</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de octubre de 2015
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de octubre de 2015</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de octubre de 2015
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de noviembre de 2015</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de noviembre de 2015
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 borderc-grey margin-t0">23 de diciembre de 2015</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 borderc-grey margin-t0">23 de diciembre de 2015
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
             </div>
 
-            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 fl-r bxs-3 bgc-white">
+            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
 
                   <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0">2016</p>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">26 de febrero de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">26 de febrero de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">23 de marzo de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">23 de marzo de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">29 de abril de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">29 de abril de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de mayo de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de mayo de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">1 de julio de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">1 de julio de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">22 de julio de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">22 de julio de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de septiembre de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de septiembre de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de octubre de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de octubre de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de diciembre de 2016</span></a>
+                  <a href="#">
+                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de diciembre de 2016
+                    <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"/>
+                        <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                    </svg>
+                    </span>
+                  </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 margin-t0 transparent">23 de diciembre de 2016</span></a>
+                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 margin-t0 transparent">23 de diciembre de 2016
+                  <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"/>
+                      <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+                  </svg>
+                  </span></a>
 
 
             </div>
