cambios en la pagina de estadisticas

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -143,7 +143,8 @@
 
     <section id="a-favor-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién vota más a favor?</p>
+        <p class="font-2">¿Quién vota
+         más a favor?</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
