incluyendo nuevos colores para los calendarios de plenos

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
 
       <section class="border-t1  padding-t1 border-b1  padding-2-0 grey borderc-grey">
 
-          <h2 class="margin-b0  maw-60 font-2 margin-b1">Calendario de plenos</h2>
+          <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
 
 
           <div class="maw-60 font-0 clearfix">
 
-            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
-                  <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0 ">2015</p>
+            <div class="w-45 display-ib   border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
+                  <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2015</p>
 
                   <a href="#">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015
@@ -148,12 +148,12 @@
 
             </div>
 
-            <div class="w-45 display-ib border-1 borderc-white  border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
+            <div class="w-45 display-ib   border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
 
-                  <p class="padding-1 font-1-5 w-100 border-b1 borderc-grey margin-y0">2016</p>
+                  <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2016</p>
 
                   <a href="#">
-                    <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016
+                    <span  class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
                         <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
@@ -255,9 +255,8 @@
           </div>
 
 
-
       </section>
-      <footer class="padding-1-0 borderc-grey border-t1 bgc-celery">
+      <footer class="padding-1-0 borderc-grey border-t1 bgc-acapulco gondola font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
