incluyendo nuevos iconos y datos en la pagina de stadisticas

--- a/creditos.html
+++ b/creditos.html
@@ -59,6 +59,12 @@
     <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
 
 
+    <p>El icono que acompaña las gráficas de votos en contra ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</p>
+
+    <p>El icono que acompaña las gráficas de votos a favor ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</p>
+
+    <p>El icono que acompaña las gráficas de abstenciones ha sido diseñador por <a href="https://thenounproject.com/bravo/">Juan Pablo Bravo</a> on the @NounProject.</p>
+
     <p>Para el CSS he utilizado Astral, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
 
     </div>
