--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </header>
-    <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-floralwhite tp-0 zi-10 bxs-5 tp-2-">
+    <nav class="w-100 border-b1 borderc-black padding-1 pos-sy bgc-floralwhite-9 tp-0 zi-10">
         <div class="maw-60">
             <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
             <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
