--- a/creditos.html
+++ b/creditos.html
@@ -48,16 +48,13 @@
 
     <p>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</p>
 
-
     <p>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
 
     <p>El icono que acompaña las gráficas de ¿quién ha presentado más mociones ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
 
     <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dant/">Dant</a> on the @NounProject.</p>
 
-
     <p>El icono que acompaña las gráficas del tripartito ha sido diseñado por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
-
 
     <p>El icono que acompaña las gráficas de votos en contra ha sido diseñador por <a href="https://thenounproject.com/made.somewhere/">Made Somewhere</a> on the @NounProject.</p>
 
@@ -65,7 +62,9 @@
 
     <p>El icono que acompaña las gráficas de abstenciones ha sido diseñador por <a href="https://thenounproject.com/bravo/">Juan Pablo Bravo</a> on the @NounProject.</p>
 
-    <p>Para el CSS he utilizado Astral, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
+    <p>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
+
+    <p>Para el CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
 
     </div>
 
