cambios en la landing

--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-grey w-100">
+    <header class="padding-1 font-0 border-b1 borderc-grey w-100">
         <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
@@ -18,47 +18,51 @@
             </div>
         </div>
     </header>
-    <div class="maw-60 padding-t1">
+    <div class="maw-60 padding-1">
         <div>
             <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
+            <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
         </div>
-        <p class="font-1">Bislai mostrará en una serie de gráficas como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+        <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
         </p>
+        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+        <a class="display-ib padding-2-0" href="http://bislai.co/plenos/2015/27-07-2015.html">Pleno del Ayuntamiento del 27 del 07 del 2015</a>
         <article class="margin-y1 display-ib  w-100">
             <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
           <div class="display-b w-100">
-            <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
+            <a href="partidos/pp.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">PP</a>
             <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
-            <span class="black  font-w8">26.88 % · 10 concejales</span>
+            <span class="black  font-w8">26.88 % <span class="display-n  display-ib--s">· 10 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">ZEC</a>
+          <a href="partidos/zec.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">ZEC</a>
           <div id="zec" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-zec  margin-r1"></div>
-          <span class="black  font-w8">24.57 % · 9 concejales</span>
+          <span class="black  font-w8">24.57 % <span class="display-n  display-ib--s">· 9 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PSOE</a>
+          <a href="partidos/psoe.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">PSOE</a>
           <div id="psoe" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-psoe  margin-r1"></div>
-          <span class="black  font-w8">18.65 % · 6 concejales</span>
+          <span class="black  font-w8">18.65 % <span class="display-n  display-ib--s">· 6 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">C'S</a>
+          <a href="partidos/cs.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">C'S</a>
           <div id="cs" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cs  margin-r1"></div>
-          <span class="black  font-w8">12.29% · 4 concejales</span>
+          <span class="black  font-w8">12.29% <span class="display-n  display-ib--s">· 4 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">CHA</a>
+          <a href="partidos/cha.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">CHA</a>
           <div id="cha" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
-          <span class="black  font-w8">6.78% · 2 concejales</span>
+          <span class="black  font-w8">6.78% <span class="display-n  display-ib--s">· 2 concejales</span></span>
           </div>
 
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
+          <a href="#" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">RESTO</a>
           <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  resto  margin-r1"></div>
           <span class="black  font-w8">10.83%</span>
           </div>
 
-    </article>
+        </article>
+      </div>
 
       <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
