actualizando los creditos

--- a/creditos.html
+++ b/creditos.html
@@ -46,6 +46,10 @@
 
     <p>Para las gráficas de las estadisticas he utilizado <a href="http://www.chartjs.org">chart.js</a> de <a href="https://twitter.com/_nnnick">Nick Downie</a>, y que ahora es mantenida por la <a href="https://github.com/chartjs/Chart.js/graphs/contributors">comunidad</a>.</p>
 
+    <p>Para el CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
+
+    <p>Para el buscador he utilizado <a href="https://github.com/Tipue/Tipue-Search">Tipue-Search</a> que esta desarrolado por <a href="http://www.tipue.com">Tipue</a>.</p>
+
     <p>Para la iconografía he utilizado iconos de <a href="material.io/icons/">Material</a>.</p>
 
     <p>El icono que acompaña las gráficas de unanimidad ha sido diseñado por <a href="https://thenounproject.com/aneeque/">Aneeque Ahmed</a> on the @NounProject.</p>
@@ -64,7 +68,7 @@
 
     <p>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
 
-    <p>Para el CSS he utilizado <a href="http://github.com/jorgeatgu/astral">Astral</a>, un framework CSS hecho a mi medida y que esta fuermente inspirado en <a href="http://tachyons.io">Tachyons</a> y <a href="http://basscss.com">Basscss</a>.</p>
+
 
     </div>
 
