dejando los partidos para la proxima version

--- a/buscador.html
+++ b/buscador.html
@@ -22,6 +22,13 @@
             </div>
         </div>
     </header>
+    <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10">
+      <div class="maw-60">
+          <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+          <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
+          <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
+      </div>
+    </nav>
     <div class="border-b1 borderc-grey w-100 padding-2-0">
         <div class="maw-60 pos-r">
             <form action="buscador.html">
