--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10">
         <div class="maw-60">
-            <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
-            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
-            <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
+            <a class="pfont-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">ESTADÍSTICAS</a>
+            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">BUSCADOR</a>
+            <a class="font-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">CREDITOS</a>
         </div>
     </nav>
-    <div class="border-b1 borderc-grey w-100 padding-2-0 grey containerBuscador">
+    <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-60" action="buscador.html">
-                <input placeholder="Busca y encuentra..." class="w-60 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+            <form class="w-100 w-60--s" action="buscador.html">
+                <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
@@ -38,7 +38,7 @@
             </form>
         </div>
     </div>
-    <div class="maw-60 padding-1">
+    <div class="maw-60 padding-1 padding-1-0--l">
         <div>
             <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
             <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
@@ -80,11 +80,11 @@
           <span class="black  font-w8">10.83%</span>
           </div>
 
-        </article>
+          </article>
       </div>
 
 
-      <section class="border-t1  padding-1 border-b1 grey borderc-grey">
+      <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
 
           <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
 
@@ -249,7 +249,7 @@
 
 
       </section>
-      <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
+      <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
