--- a/creditos.html
+++ b/creditos.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-grey w-100">
+    <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
           <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
